--- a/src/Components/Portal/KeywordAssessment/KeywordAssessment.css
+++ b/src/Components/Portal/KeywordAssessment/KeywordAssessment.css
@@ -1,195 +1,193 @@
 /* PortalStatus.css */
 
 .container {
-    margin-top: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 2.5rem;
-    color: #343a40;
-  }
-  
-  .table {
+  margin-top: 20px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 2.5rem;
+  color: #343a40;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table thead {
+  background-color: #f5f8fd;
+  color: black;
+}
+
+.table thead th {
+  padding: 15px;
+  text-align: left;
+}
+
+.table tbody tr {
+  background-color: #f8f9fa;
+  transition: background-color 0.2s ease;
+}
+
+.table tbody tr:hover {
+  background-color: #e9ecef;
+}
+
+.table tbody td {
+  padding: 15px;
+  text-align: left;
+}
+
+.table tbody td button {
+  margin: 0;
+  padding: 8px 12px;
+}
+
+.table tbody td button:disabled {
+  background-color: #ced4da;
+  cursor: not-allowed;
+}
+
+.table tbody td:last-child {
+  text-align: center;
+}
+
+.button-outline-primary {
+  color: #007bff;
+  border-color: #007bff;
+  background-color: transparent;
+  padding: 8px 12px;
+  border-radius: 4px;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.button-outline-primary:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+.button-outline-primary:disabled {
+  background-color: #e9ecef;
+  color: #adb5bd;
+}
+
+.status-accepted {
+  color: green;
+  font-weight: bold;
+}
+
+.status-not-accepted {
+  color: red;
+  font-weight: bold;
+}
+
+.ReactModalPortal .ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.75) !important;
+  z-index: 9999;
+  color: white;
+}
+
+.App .portalstatusdiv > .container {
+  margin-top: 40px;
+}
+
+.portalstatusdiv h1 {
+  font-size: 30px;
+  text-align: left;
+}
+
+.table tr .btn-outline-primary {
+  height: 30px;
+  font-size: 13px;
+  line-height: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+}
+
+/* Table Data */
+
+.table tr input[type="text"] {
+  float: left;
+  outline: none;
+  background: rgb(209, 209, 209);
+  border: 1px solid gray;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* Actionbutton */
+.table tr .actionbuttons .actionbutton_keywordsbutton {
+  display: flex;
+  gap: 10px;
+}
+
+/* Input */
+.table tr .feedbackdiv input[type="text"] {
+  background-color: transparent;
+}
+
+.feedbackdiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+
+.portalstatusdiv .paginationdiv {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.table tbody .emptyrow td:nth-child(1) {
+  text-align: center;
+}
+
+/* loader css */
+/* From Uiverse.io by satyamchaudharydev */
+.loader {
+  display: block;
+  --height-of-loader: 4px;
+  --loader-color: #0071e2;
+  width: 130px;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.loader::before {
+  content: "";
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1s ease-in-out infinite;
+}
+
+@keyframes moving {
+  50% {
     width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
   }
-  
-  .table thead {
-    background-color: #f5f8fd;
-    color: black;
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
   }
-  
-  .table thead th {
-    padding: 15px;
-    text-align: left;
-  }
-  
-  .table tbody tr {
-    background-color: #f8f9fa;
-    transition: background-color 0.2s ease;
-  }
-  
-  .table tbody tr:hover {
-    background-color: #e9ecef;
-  }
-  
-  .table tbody td {
-    padding: 15px;
-    text-align: left;
-  }
-  
-  .table tbody td button {
-    margin: 0;
-    padding: 8px 12px;
-  }
-  
-  .table tbody td button:disabled {
-    background-color: #ced4da;
-    cursor: not-allowed;
-  }
-  
-  .table tbody td:last-child {
-    text-align: center;
-  }
-  
-  .button-outline-primary {
-    color: #007bff;
-    border-color: #007bff;
-    background-color: transparent;
-    padding: 8px 12px;
-    border-radius: 4px;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  }
-  
-  .button-outline-primary:hover {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .button-outline-primary:disabled {
-    background-color: #e9ecef;
-    color: #adb5bd;
-  }
-  
-  .status-accepted {
-    color: green;
-    font-weight: bold;
-  }
-  
-  .status-not-accepted {
-    color: red;
-    font-weight: bold;
-  }
-  
-  .ReactModalPortal .ReactModal__Overlay {
-    background-color: rgba(0, 0, 0, 0.75) !important;
-    z-index: 9999;
-    color: white;
-  }
-  
-  .App .portalstatusdiv > .container {
-    margin-top: 40px;
-  }
-  
-  .portalstatusdiv h1 {
-    font-size: 30px;
-    text-align: left;
-  }
-  
-  .table tr .btn-outline-primary {
-    height: 30px;
-    font-size: 13px;
-    line-height: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 5px;
-  }
-  
-  /* Table Data */
-  
-  .table tr input[type="text"] {
-    float: left;
-    outline: none;
-    background: rgb(209, 209, 209);
-    border: 1px solid gray;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  
-  /* Actionbutton */
-  .table tr .actionbuttons .actionbutton {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  /* Input */
-  .table tr .feedbackdiv input[type="text"] {
-    background-color: transparent;
-  }
-  
-  .feedbackdiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  .portalstatusdiv .paginationdiv {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 20px;
-  }
-  
-  .table tbody .emptyrow td:nth-child(1) {
-    text-align: center;
-  }
-  
-  /* loader css */
-  /* From Uiverse.io by satyamchaudharydev */
-  .loader {
-    display: block;
-    --height-of-loader: 4px;
-    --loader-color: #0071e2;
-    width: 130px;
-    height: var(--height-of-loader);
-    border-radius: 30px;
-    background-color: rgba(0, 0, 0, 0.2);
-    position: relative;
-  }
-  
-  .loader::before {
-    content: "";
-    position: absolute;
-    background: var(--loader-color);
-    top: 0;
-    left: 0;
-    width: 0%;
-    height: 100%;
-    border-radius: 30px;
-    animation: moving 1s ease-in-out infinite;
-  }
-  
-  @keyframes moving {
-    50% {
-      width: 100%;
-    }
-  
-    100% {
-      width: 0;
-      right: 0;
-      left: unset;
-    }
-  }
-  
-  /* Loader */
-  .portalstatusdiv .loader {
-    position: fixed;
-    top: 50%;
-    left: 45%;
-  }
-  
+}
+
+/* Loader */
+.portalstatusdiv .loader {
+  position: fixed;
+  top: 50%;
+  left: 45%;
+}
