--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
+  height: 100vh;
 }
 .lazyLoader img {
   width: auto;
@@ -112,4 +112,29 @@
   margin-right: 5px;
   transition: all ease-out 0.3s;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Table Data */
+#dashboard-tabs-tabpane-Approval-Activity tr td {
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: #b7b7b7;
+}
+
+/* Th */
+#dashboard-tabs-tabpane-Approval-Activity tr th {
+  border-right-width: 1px;
+  border-right-color: #b8bbbc;
+}
+
+/* Th */
+#dashboard-tabs-tabpane-Keyword-Assess tr th {
+  border-right-width: 1px;
+  border-right-color: #adadad;
+}
+
+/* Table Data */
+#dashboard-tabs-tabpane-Keyword-Assess tr td {
+  border-right-width: 1px;
+  border-right-color: #afafaf;
 }
